# starting-ragchatbot-codebase

./: .env.example  AGENTS.md  pyproject.toml  run.sh
backend/: ai_generator.py  config.py  rag_system.py  search_tools.py
task/: task_websearch.md
